minor changes: - [CSS] categories bottom padding "fix" - [Code] better code readability?

--- a/src/sass/category.scss
+++ b/src/sass/category.scss
@@ -46,3 +46,7 @@ categories {
     }
 
 }
+
+categories:last-child {
+    margin-bottom: 2rem;
+}
