--- a/src/sass/mobile.scss
+++ b/src/sass/mobile.scss
@@ -59,10 +59,6 @@
 
         }
 
-        categories:last-child {
-            padding-bottom: 2rem;
-        }
-
         application {
             margin-top: -5rem;
             grid-template-columns: 128px auto;
