--- a/static/css/main.css
+++ b/static/css/main.css
@@ -174,6 +174,10 @@ categories .card img {
   width: 100px;
 }
 
+categories:last-child {
+  margin-bottom: 2rem;
+}
+
 /* #### APPLICATION #### */
 application {
   display: grid;
@@ -271,7 +275,6 @@ application #support p {
   nav .menu {
     display: block;
   }
-
   section header {
     font-size: 2rem;
   }
@@ -301,9 +304,6 @@ application #support p {
     height: 6rem;
     margin-top: 0.1em;
     margin-inline: auto;
-  }
-  section categories:last-child {
-    padding-bottom: 2rem;
   }
   section application {
     margin-top: -5rem;
